@@ -163,6 +163,38 @@ test tclresp-3.1 {ns_return} -constraints serverListen -setup {
     ns_unregister_proc GET /tclresp
 } -result {200 text/plain 1 x}
 
+test tclresp-3.2 {ns_return} -constraints serverListen -setup {
+    ns_register_proc GET /tclresp {
+        ns_return 200 text/plain [string repeat x 1024]
+    }
+} -body {
+    nstest_http -getbody 1 GET /tclresp
+} -cleanup {
+    ns_unregister_proc GET /tclresp
+} -result [list 200 [string repeat x 1024]]
+
+test tclresp-3.3 {ns_return large string} -constraints serverListen -setup {
+    ns_register_proc GET /tclresp {
+        ns_return 200 text/plain [string repeat x 48982]
+    }
+} -body {
+    nstest_http -getbody 1 GET /tclresp
+} -cleanup {
+    ns_unregister_proc GET /tclresp
+} -result [list 200 [string repeat x 48982]]
+
+test tclresp-3.4 {ns_return larger string than can be sent in one write} \
+    -constraints serverListen -setup {
+
+    ns_register_proc GET /tclresp {
+        ns_return 200 text/plain [string repeat x 48983]
+    }
+} -body {
+    nstest_http -getbody 1 GET /tclresp
+} -cleanup {
+    ns_unregister_proc GET /tclresp
+} -result [list 200 [string repeat x 48983]]
+
 
 
 test tclresp-4.1 {ns_respond} -constraints serverListen -setup {
@@ -370,13 +402,13 @@ test tclresp-12.4 {
 
     ns_register_proc GET /tclresp {
         ns_headers 200
-        eval ns_write [split [string repeat x 2000] ""]
+        eval ns_write [split [string repeat x 750][string repeat y 750][string repeat z 750] ""]
     }
 } -body {
     nstest_http -getbody 1 GET /tclresp
 } -cleanup {
     ns_unregister_proc GET /tclresp
-} -result "200 [string repeat x 2000]"
+} -result "200 [string repeat x 750][string repeat y 750][string repeat z 750]"
 
 test tclresp-12.5 {
     ns_write multiple buffers, some with odd sizes
